migrated from fullpage js (buggy on mobile) to Swiper

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,3 +1,6 @@
+.slider {
+  height: 100vh;
+}
 .landing {
   position: relative;
   width: 100%;
